--- a/html/index.html
+++ b/html/index.html
@@ -263,9 +263,11 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading fw-normal lh-1">Mitologia Griega</h2>
-          <p class="lead">Un universo de dioses, héroes y criaturas mitológicas donde el Olimpo es el centro del poder. Zeus,
+          <p class="lead">Un universo de dioses, héroes y criaturas mitológicas donde el Olimpo es el centro del poder.
+            Zeus,
             Poseidón, Atenea y otros inmortales protagonizan historias de amor, traición y heroísmo que han
-            perdurado a lo largo de los siglos. <a href="./MitologiaGriega.html">Leer mas...</a></p></p>
+            perdurado a lo largo de los siglos. <a href="./MitologiaGriega.html">Leer mas...</a></p>
+          </p>
         </div>
         <div class="col-md-5">
           <img class="imagenes-landing" src="../images/zeus.jpg" alt="">
@@ -277,10 +279,12 @@
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
           <h2 class="featurette-heading fw-normal lh-1">Mitologia Nordica</h2>
-          <p class="lead">Forjada en el frío y la batalla, esta mitología narra la historia de dioses guerreros como Odín y
+          <p class="lead">Forjada en el frío y la batalla, esta mitología narra la historia de dioses guerreros como
+            Odín y
             Thor, quienes luchan contra fuerzas caóticas hasta el inevitable Ragnarök, el fin del mundo y su
             renacimiento.
-            <a href="./MitologiaNordica.html">Leer mas...</a></p>
+            <a href="./MitologiaNordica.html">Leer mas...</a>
+          </p>
         </div>
         <div class="col-md-5 order-md-1">
           <img class="imagenes-landing" src="../images/thor.jpg" alt="">
@@ -292,10 +296,12 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading fw-normal lh-1">Mitologia Egipcia</h2>
-          <p class="lead">Los antiguos egipcios creían en muchos dioses y diosas, siendo Osiris el dios de la resurrección y la
+          <p class="lead">Los antiguos egipcios creían en muchos dioses y diosas, siendo Osiris el dios de la
+            resurrección y la
             vida
             después de la muerte. Isis, su esposa, era la diosa de la magia.
-            <a href="./MitologiaEgipcia.html">Leer mas...</a></p>
+            <a href="./MitologiaEgipcia.html">Leer mas...</a>
+          </p>
         </div>
         <div class="col-md-5">
           <img class="imagenes-landing" src="../images/Osiris.jpg" alt="">
@@ -308,12 +314,14 @@
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
           <h2 class="featurette-heading fw-normal lh-1">Mitologia Romana</h2>
-          <p class="lead">Una mitología influenciada por la griega, pero con un fuerte sentido de orden y destino, donde dioses
+          <p class="lead">Una mitología influenciada por la griega, pero con un fuerte sentido de orden y destino, donde
+            dioses
             como Júpiter, Marte y Venus regían la vida de los hombres y el destino del Imperio. Sus relatos
             estaban
             ligados a la expansión, la guerra y la grandeza de Roma, reflejando la disciplina y el poder de su
             civilización.
-            <a href="./MitologiaRomana.html">Leer más...</a></p>
+            <a href="./MitologiaRomana.html">Leer más...</a>
+          </p>
         </div>
         <div class="col-md-5 order-md-1">
           <img class="imagenes-landing" src="../images/Dioses-Romanos.jpg" alt="">
@@ -337,19 +345,12 @@
       </div>
 
       <hr class="featurette-divider">
-
-
-
-
-      <!-- /END THE FEATURETTES -->
-
     </div><!-- /.container -->
 
 
     <!-- FOOTER -->
     <footer class="container">
       <p class="float-end"><a href="#">Back to top</a></p>
-      <p>&copy; 2017–2024 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
     </footer>
   </main>
   <script src="../dist/js/bootstrap.bundle.min.js"></script>
