--- a/html/MitologiaGriega.html
+++ b/html/MitologiaGriega.html
@@ -130,8 +130,8 @@
             </li>
           </ul>
           <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Buscar</button>
           </form>
         </div>
       </div>
@@ -152,7 +152,7 @@
           <img class="header" src="../images/pruebaa.png" alt="">
           <div class="container">
             <div class="carousel-caption text-start">
-              <h1>Mitologias del Mundo.</h1>
+              <h1>Mitologia Griega.</h1>
               <p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
               <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
             </div>
@@ -258,20 +258,15 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
-              role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="var(--bs-secondary-color)" />
-            </svg>
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
+              role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false" src="../images/Dioses-Romanos.jpg">
             <h2 class="fw-normal">Zeus</h2>
             <p>Dios del cielo y el trueno, rey del Olimpo. Hijo de Cronos y Rea, lideró la rebelión contra los titanes y estableció su dominio sobre dioses y mortales. Conocido por sus múltiples amoríos, engendró a muchos héroes y dioses. Su símbolo es el rayo, y se le representa como un hombre maduro con barba y un cetro.</p>
             <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
-              role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="var(--bs-secondary-color)" />
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
+              role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false" src="../images/Dioses-Romanos.jpg">
             </svg>
             <h2 class="fw-normal">Hera</h2>
             <p>Diosa del matrimonio y la familia, esposa de Zeus. Famosa por su carácter vengativo, perseguía a las amantes de su esposo y a sus hijos ilegítimos. Era protectora de las mujeres casadas y la reina del Olimpo. Su símbolo es el pavo real, y se le representa con una diadema y un cetro.
@@ -279,10 +274,8 @@
             <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
-              role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="var(--bs-secondary-color)" />
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
+              role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false" src="../images/Dioses-Romanos.jpg">
             </svg>
             <h2 class="fw-normal">Poseidon</h2>
             <p>Dios del mar y los terremotos, hermano de Zeus y Hades. Gobernaba los océanos desde su palacio submarino y podía calmar o desatar tormentas a voluntad. Creó al caballo y tuvo numerosos descendientes, incluyendo al cíclope Polifemo. Su símbolo es el tridente.</p>
@@ -291,20 +284,16 @@
         </div><!-- /.row -->
         <div class="row">
           <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
-              role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="var(--bs-secondary-color)" />
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
+              role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false" src="../images/Dioses-Romanos.jpg">
             </svg>
             <h2 class="fw-normal">Hades</h2>
             <p>Dios del inframundo y los muertos, hermano mayor de Zeus y Poseidón. Gobernaba el reino de los difuntos y rara vez salía de él. Raptó a Perséfone para convertirla en su esposa, lo que originó el mito de las estaciones. Su casco de invisibilidad le permitía moverse sin ser visto.</p>
             <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
-              role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="var(--bs-secondary-color)" />
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
+              role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false" src="../images/Dioses-Romanos.jpg">
             </svg>
             <h2 class="fw-normal">Atenea</h2>
             <p> Diosa de la sabiduría y la estrategia militar. Nació armada de la cabeza de Zeus tras haber sido tragada en el vientre de Metis. Protectora de Atenas y los héroes, apoyó a Odiseo y Perseo. Su símbolo es el búho, y se le representa con la égida y una lanza.
@@ -312,10 +301,8 @@
             <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
-              role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="var(--bs-secondary-color)" />
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
+              role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false" src="../images/Dioses-Romanos.jpg">
             </svg>
             <h2 class="fw-normal">Apolo</h2>
             <p>Dios del sol, la música, la poesía y la profecía. Hijo de Zeus y Leto, poseía el oráculo de Delfos y guiaba a los humanos con su sabiduría. También era un arquero letal y patrón de las artes. Se le representa con una lira y una corona de laurel.</p>
@@ -324,20 +311,16 @@
         </div>
         <div class="row">
           <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
-              role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="var(--bs-secondary-color)" />
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
+              role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false" src="../images/Dioses-Romanos.jpg">
             </svg>
             <h2 class="fw-normal">Artemisa</h2>
             <p>Diosa de la caza, la virginidad y la naturaleza salvaje. Hermana gemela de Apolo, protegía a los animales y castigaba a quienes los dañaban. Defendía su pureza con ferocidad y ayudaba en los partos. Se le representa con un arco y flechas.</p>
             <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
-              role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="var(--bs-secondary-color)" />
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
+            role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false" src="../images/Dioses-Romanos.jpg">
             </svg>
             <h2 class="fw-normal">Afrodita</h2>
             <p>Diosa del amor, la belleza y el deseo. Nació de la espuma del mar tras la castración de Urano o, según otra versión, era hija de Zeus y Dione. Casada con Hefesto, tuvo numerosos amantes, entre ellos Ares. Su símbolo es la paloma, y se le representa con una concha marina.
@@ -345,10 +328,8 @@
             <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
-              role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="var(--bs-secondary-color)" />
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
+              role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false" src="../images/Dioses-Romanos.jpg">
             </svg>
             <h2 class="fw-normal">Ares</h2>
             <p>Dios de la guerra y la violencia. Hijo de Zeus y Hera, encarnaba la brutalidad del combate y el caos del campo de batalla. Amante de Afrodita, tuvo varios hijos con ella. Se le representa con armadura, casco y una lanza.</p>
@@ -357,20 +338,16 @@
         </div><!-- /.row -->
         <div class="row">
           <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
-              role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="var(--bs-secondary-color)" />
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
+              role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false" src="../images/Dioses-Romanos.jpg">
             </svg>
             <h2 class="fw-normal">Dionisio</h2>
             <p>Dios del vino, la locura y el éxtasis. Hijo de Zeus y Sémele, fue criado por ninfas tras la muerte de su madre. Introdujo la viticultura y los misterios dionisíacos, promoviendo la alegría y el frenesí. Se le representa con una copa de vino y una corona de hiedra.</p>
             <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
-              role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="var(--bs-secondary-color)" />
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
+              role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false" src="../images/Dioses-Romanos.jpg">
             </svg>
             <h2 class="fw-normal">Hermes</h2>
             <p>Dios mensajero, protector de viajeros, comerciantes y ladrones. Hijo de Zeus y Maya, era astuto y veloz, con sandalias aladas que le permitían moverse entre mundos. Inventó la lira y ayudó a héroes como Perseo. Su símbolo es el caduceo.
@@ -378,10 +355,8 @@
             <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
-              role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="var(--bs-secondary-color)" />
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
+              role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false" src="../images/Dioses-Romanos.jpg">
             </svg>
             <h2 class="fw-normal">Hefesto</h2>
             <p>Dios del fuego, la forja y la metalurgia. Hijo de Hera, aunque algunas versiones dicen que también era hijo de Zeus, Hefesto nació con una deformidad y fue arrojado del Olimpo por su madre. </p>
