--- a/html/MitologiaGriega.html
+++ b/html/MitologiaGriega.html
@@ -372,23 +372,80 @@
       <hr class="featurette-divider">
       <p>
       <h3 id="CriaturasYSeres">Criaturas y Seres Mitologicos </h3>
-      Los mitos griegos están llenos de seres fantásticos, como: <br>
-      <section class="fotos-criaturas">
-        <p>Minotauro: Mitad hombre, mitad toro, habitante del laberinto de Creta.
-          <img src="./images/zeus.jpg" alt="Zeus">
-        </p>
-        <p>Cíclopes: Gigantes de un solo ojo, forjadores de las armas divinas.
-          <img src="./images/zeus.jpg" alt="Zeus">
-        </p>
-        <p>Medusa: Gorgona con serpientes en la cabeza, capaz de petrificar con la mirada.
-          <img src="./images/zeus.jpg" alt="Zeus">
-        </p>
-
-        <p>Quimera: Criatura con cabeza de león, cuerpo de cabra y cola de serpiente.</p>
-
-        Hidra de Lerna: Serpiente de múltiples cabezas que se regeneraban al ser cortadas. <br>
-
-        Pegaso: Caballo alado nacido de la sangre de Medusa.
+      Los mitos griegos están llenos de seres fantásticos, como: <br> <br>
+      <section class="cartas">
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <h3>Minotauro</h3>
+              <img class="tarjetas" src="../images/thor.jpg" alt="Personaje">
+            </div>
+            <div class="flip-card-back">
+              <p>Mitad hombre, mitad toro, habitante del laberinto de Creta.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <h3>Ciclopes</h3>
+              <img src="imagen.jpg" alt="Personaje">
+            </div>
+            <div class="flip-card-back">
+              <p>Gigantes de un solo ojo, forjadores de las armas divinas.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <h3>Medusa</h3>
+              <img src="imagen.jpg" alt="Personaje">
+            </div>
+            <div class="flip-card-back">
+              <p>Gorgona con serpientes en la cabeza, capaz de petrificar con la mirada.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <h3>Quimera</h3>
+              <img class="tarjetas" src="../images/Quimera.jpg" alt="Personaje">
+            </div>
+            <div class="flip-card-back">
+              <p>Criatura con cabeza de león, cuerpo de cabra y cola de serpiente.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <h3>Hidra de Lerna</h3>
+              <img src="imagen.jpg" alt="Personaje">
+            </div>
+            <div class="flip-card-back">
+              <p>Serpiente de múltiples cabezas que se regeneraban al ser cortadas.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <h3>Pegaso</h3>
+              <img class="tarjetas" src="../images/Pegaso.jpg" alt="Personaje">
+            </div>
+            <div class="flip-card-back">
+              <p>Caballo alado nacido de la sangre de Medusa.
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
       </p>
       <hr class="featurette-divider">
