--- a/html/Enlaces.html
+++ b/html/Enlaces.html
@@ -145,10 +145,25 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+              <a class="nav-link " aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./Enlaces.html">Link</a>
+              <a class="nav-link active" href="./Enlaces.html">Link</a>
+            </li>
+            <li>
+              <a class="nav-link " href="./MitologiaGriega.html">Mitologia Griega</a>
+            </li>
+            <li>
+              <a class="nav-link" href="./MitologiaNordica.html">Mitologia Nordica</a>
+            </li>
+            <li>
+              <a class="nav-link" href="./MitologiaEgipcia.html">Mitologia Egipcia</a>
+            </li>
+            <li>
+              <a class="nav-link" href="./MitologiaRomana.html">Mitologia Romana</a>
+            </li>
+            <li>
+              <a class="nav-link" href="./MitologiaJaponesa.html">Mitologia Japonesa</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
