--- a/html/MitologiaJaponesa.html
+++ b/html/MitologiaJaponesa.html
@@ -123,15 +123,30 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+              <a class="nav-link " aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./Enlaces.html">Link</a>
             </li>
+            <li>
+              <a class="nav-link " href="./MitologiaGriega.html">Mitologia Griega</a>
+            </li>
+            <li>
+              <a class="nav-link" href="./MitologiaNordica.html">Mitologia Nordica</a>
+            </li>
+            <li>
+              <a class="nav-link" href="./MitologiaEgipcia.html">Mitologia Egipcia</a>
+            </li>
+            <li>
+              <a class="nav-link" href="./MitologiaRomana.html">Mitologia Romana</a>
+            </li>
+            <li>
+              <a class="nav-link active" href="./MitologiaJaponesa.html">Mitologia Japonesa</a>
+            </li>
           </ul>
           <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Buscar</button>
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
         </div>
       </div>
